xidl-parser/tests/snapshots/test_enum__typed_ast__enum_empty.snap
---
source: xidl-parser/tests/test-enum.rs
expression: ast
---
Specification(
    [
        TypeDcl(
            TypeDcl {
                annotations: [],
                decl: ConstrTypeDcl(
                    EnumDcl(
                        EnumDcl {
                            ident: Identifier(
                                "A",
                            ),
                            member: [],
                        },
                    ),
                ),
            },
        ),
    ],
)
