xidl-parser/tests/snapshots/test_enum__typed_ast__enum_simple_comma.snap
---
source: xidl-parser/tests/test-enum.rs
expression: ast
---
Specification(
    [
        TypeDcl(
            TypeDcl(
                [
                    ConstrTypeDcl(
                        EnumDcl(
                            EnumDcl {
                                ident: Identifier(
                                    "A",
                                ),
                                member: [
                                    Enumerator {
                                        ident: Identifier(
                                            "B",
                                        ),
                                    },
                                    Enumerator {
                                        ident: Identifier(
                                            "C",
                                        ),
                                    },
                                ],
                            },
                        ),
                    ),
                ],
            ),
        ),
    ],
)
